Possivelmente finalizado, falta revisar

--- a/atv1-padroes-web/HTML.html
+++ b/atv1-padroes-web/HTML.html
@@ -144,6 +144,17 @@
 
             <section id = "projetos-futuros">
                 <h2>Projetos Futuros</h2>
+
+                <ul class="lista-imagens">
+                    <li>
+                        <img id="img-database" src="imgs/database.png" alt="Uma imagem representando um banco de dados">  
+                        <label>Área de dados</label>
+                    </li>
+                    <li>
+                        <img id="img-cybersec" src="imgs/cybersec.png" alt="Uma imagem represtando o conceito de cibersegurança">
+                        <label>Área de cibersegurança</label>
+                    </li>
+                </ul>
             </section>
 
         </main>
