Quase pronto, falta principalmente os conteúdos (texto e imagens)

--- a/atv03-09/main.html
+++ b/atv03-09/main.html
@@ -11,11 +11,12 @@
     <body>
         <header>
             <img class="logo" alt="Logo do site, representando um [...]" src="">
-            <span>Título provisório</span>
+            <h1>Título provisório</span>
         </header>
 
         <main>
             <h1>Ranking de alguma coisa (a definir)</h1>
+            <small>Clique nos títulos para ser levado aos sites e nas setas para expandir.</small>
 
             <nav>
                 <ol>
@@ -27,7 +28,7 @@
                                 </a>
                             </summary>
                                 <div class="container-descricao">
-                                        <p>asdasd</p>
+                                        <p>asdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasd</p>
                                     <div class="container-imagem">
                                         <img alt="" src="img/database.png" class="imagem-descricao">
                                         <label>Legenda provisória da imagem</label>
@@ -103,8 +104,6 @@
                                 </div>
                         </details>
                     </li>
-
-
                 </ol>
             </nav>
         </main>
