Conteúdo adicionado, falta arrumar o header

--- a/atv03-09/main.html
+++ b/atv03-09/main.html
@@ -23,16 +23,33 @@
                     <li>
                         <details>
                             <summary>
-                                <a href="#">
-                                    Link provisório
+                                <a href="https://pt.wikipedia.org/wiki/Experi%C3%AAncia_do_usu%C3%A1rio">
+                                    Funcionamento da Interface (Experiência do Usuário - UX) 
                                 </a>
                             </summary>
                                 <div class="container-descricao">
-                                        <p>asdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasd</p>
-                                    <div class="container-imagem">
-                                        <img alt="" src="img/database.png" class="imagem-descricao">
-                                        <label>Legenda provisória da imagem</label>
-                                    </div>
+                                        <p>A funcionalidade da interface é a base de toda a experiência do usuário. Seu desenvolvimento deve ser alinhado aos objetivos da página, considerando fatores essenciais como público-alvo e acessibilidade. Na prática, isso se traduz em uma navegação intuitiva, onde os botões são responsivos, as transições são fluidas e a disposição dos elementos guia o usuário de forma lógica, prevenindo qualquer falha técnica que possa comprometer a experiência.</p>
+                                    <figure>
+                                        <img alt="Imagem representando o conceito de UX (Experiência do Usuário)" src="img/ux.png" class="imagem-descricao">
+                                        <figcaption>UX - Experiência do Usuário</figcaption>
+                                    </figure>
+                                </div>
+                        </details>
+                    </li>
+                    
+                    <li>
+                        <details>
+                            <summary>
+                                <a href="https://www-figma-com.translate.goog/resource-library/types-of-color-palettes/?_x_tr_sl=en&_x_tr_tl=pt&_x_tr_hl=pt&_x_tr_pto=tc">
+                                    Paleta de Cores 
+                                </a>
+                            </summary>
+                                <div class="container-descricao">
+                                        <p>A paleta de cores é um componente central da identidade visual e da usabilidade da interface. Sua escolha ultrapassa a estética, sendo uma decisão estratégica para reforçar a marca e guiar a atenção do usuário. Na prática, isso resulta em uma hierarquia visual clara, onde cores de destaque são usadas em botões e links importantes, e o contraste adequado garante a legibilidade, tornando a experiência acessível e intuitiva. Assim como a UX, a interface de usuário também pode seguir outros caminhos dependendo do objetivo da página.</p>
+                                    <figure>
+                                        <img alt="Imagem representando uma paleta de cores" src="img/paletacores.png" class="imagem-descricao">
+                                        <figcaption>Paleta de cores</figcaption>
+                                    </figure>
                                 </div>
                         </details>
                     </li>
@@ -40,16 +57,16 @@
                     <li>
                         <details>
                             <summary>
-                                <a href="#">
-                                    Link provisório
+                                <a href="https://pt.wikipedia.org/wiki/Audiovisual">
+                                    Recurso Audivisual
                                 </a>
                             </summary>
                                 <div class="container-descricao">
-                                        <p>asdasd</p>
-                                    <div class="container-imagem">
-                                        <img alt="" src="img/database.png" class="imagem-descricao">
-                                        <label>Legenda provisória da imagem</label>
-                                    </div>
+                                        <p>O recurso audiovisual é uma ferramenta poderosa para capturar a atenção e transmitir informações complexas de forma dinâmica. Sua implementação deve ser planejada para enriquecer o conteúdo e aumentar o engajamento do usuário, sem comprometer o desempenho da página. Isso se traduz em vídeos e áudios, que buscam prender a atenção do usuário de forma muito mais eficaz que mídias estáticas.</p>
+                                    <figure>
+                                        <img alt="Imagem representando os diversos elementos dos recursos audiovisuais" src="img/audiovisual.png" class="imagem-descricao">
+                                        <figcaption>Audiovisual</figcaption>
+                                    </figure>
                                 </div>
                         </details>
                     </li>
@@ -57,16 +74,16 @@
                     <li>
                         <details>
                             <summary>
-                                <a href="#">
-                                    Link provisório
+                                <a href="https://pt.wikipedia.org/wiki/Texto">
+                                    Texto
                                 </a>
                             </summary>
                                 <div class="container-descricao">
-                                        <p>asdasd</p>
-                                    <div class="container-imagem">
-                                        <img alt="" src="img/database.png" class="imagem-descricao">
-                                        <label>Legenda provisória da imagem</label>
-                                    </div>
+                                        <p>O texto é o principal canal de comunicação com o usuário. Cada palavra deve ser intencional, alinhada ao objetivo da página e focada em guiar o usuário para uma ação específica. Na prática, um bom texto se manifesta em títulos claros, descrições informativas e chamadas para ação persuasivas, que não só informam, mas também convertem e fortalecem a mensagem.</p>
+                                    <figure>
+                                        <img alt="Uma imagem representando um texto" src="img/texto.png" class="imagem-descricao">
+                                        <figcaption>Texto</figcaption>
+                                    </figure>
                                 </div>
                         </details>
                     </li>
@@ -74,33 +91,16 @@
                     <li>
                         <details>
                             <summary>
-                                <a href="#">
-                                    Link provisório
+                                <a href="https://pt.wikipedia.org/wiki/Imagem">
+                                    Imagem
                                 </a>
                             </summary>
                                 <div class="container-descricao">
-                                        <p>asdasd</p>
-                                    <div class="container-imagem">
-                                        <img alt="" src="img/database.png" class="imagem-descricao">
-                                        <label>Legenda provisória da imagem</label>
-                                    </div>
-                                </div>
-                        </details>
-                    </li>
-
-                    <li>
-                        <details>
-                            <summary>
-                                <a href="#">
-                                    Link provisório
-                                </a>
-                            </summary>
-                                <div class="container-descricao">
-                                        <p>asdasd</p>
-                                    <div class="container-imagem">
-                                        <img alt="" src="img/database.png" class="imagem-descricao">
-                                        <label>Legenda provisória da imagem</label>
-                                    </div>
+                                        <p>Imagens estáticas atuam como elementos de suporte, reforçando a atmosfera criada pela paleta de cores. Elas podem ser usadas para quebrar blocos de texto ou adicionar interesse visual sem sobrecarregar o usuário. No entanto, são o elemento menos crítico da lista. A página pode cumprir seu objetivo principal mesmo sem imagens, mas não pode funcionar sem uma boa interface, cores adequadas ou o vídeo de teste. Elas são complementares e ajudam a compor o ambiente, mas a sua ausência não comprometeria a funcionalidade central da página.</p>
+                                    <figure>
+                                        <img alt="Uma imagem representando uma imagem" src="img/imagem.png" class="imagem-descricao">
+                                        <figcaption>Legenda provisória da imagem</figcaption>
+                                    </figure>
                                 </div>
                         </details>
                     </li>
