TODO: 'Aplicar efeitos de filtro ou máscara sobre as imagens coerentes com sua posição no ranking;'

--- a/atv03-09/main.html
+++ b/atv03-09/main.html
@@ -10,12 +10,19 @@
 
     <body>
         <header>
-            <img class="logo" alt="Logo do site, representando um [...]" src="">
-            <h1>Título provisório</span>
+            <svg class = "logo"
+                viewBox="0 0 400 400"
+                height="5em"
+                width="5em">
+                <rect x="0" y="0" width="50%" height="50%" fill="tomato" opacity="0.75" />
+                <rect x="20%" y="20%" width="50%" height="50%" fill="slategrey" opacity="0.75" />
+                <rect x="40%" y="40%" width="50%" height="50%" fill="olive" opacity="0.75" />
+            </svg>
+            <h1>WebDev101</h1>
         </header>
 
         <main>
-            <h1>Ranking de alguma coisa (a definir)</h1>
+            <h1>Ranking de elementos de interface</h1>
             <small>Clique nos títulos para ser levado aos sites e nas setas para expandir.</small>
 
             <nav>
@@ -109,7 +116,7 @@
         </main>
 
         <footer>
-
+            <p><small>Marcela de Meira Carvalho & Murilo Bontorin Franco</small></p>
         </footer>
     </body>
 </html>
