--- a/atv1-padroes-web/HTML.html
+++ b/atv1-padroes-web/HTML.html
@@ -147,12 +147,16 @@
 
                 <ul class="lista-imagens">
                     <li>
-                        <img id="img-database" src="imgs/database.png" alt="Uma imagem representando um banco de dados">  
-                        <label>Área de dados</label>
+                        <figure>
+                            <img src="imgs/database.png" alt="Uma imagem representando um banco de dados">  
+                            <figcaption>Área de dados</figcaption>
+                        </figure>
                     </li>
                     <li>
-                        <img id="img-cybersec" src="imgs/cybersec.png" alt="Uma imagem represtando o conceito de cibersegurança">
-                        <label>Área de cibersegurança</label>
+                        <figure>
+                            <img src="imgs/cybersec.png" alt="Uma imagem represtando o conceito de cibersegurança">
+                            <figcaption>Área de cibersegurança</figcaption>
+                        </figure>
                     </li>
                 </ul>
             </section>
