atv 03/09: Adicionado parágrafo de introdução, único requisito faltante é a máscara sobre as imagens

--- a/atv03-09/main.html
+++ b/atv03-09/main.html
@@ -23,6 +23,11 @@
 
         <main>
             <h1>Ranking de elementos de interface</h1>
+
+            <p class="paragrafo-introducao">
+                O ranking a seguir lista 5 elementos de interface comumente presentes em diversos sites e aplicações, leia para saber mais sobre!!
+            </p>
+
             <small>Clique nos títulos para ser levado aos sites e nas setas para expandir.</small>
 
             <nav>
