Tabela populada via script, falta o css e os scripts de ordenar e juntar dados iguais

--- a/atv2-padroes-web/main.html
+++ b/atv2-padroes-web/main.html
@@ -29,7 +29,7 @@
                 Confira a seguir os 50 albuns mas vendidos da história!
             </p>
 
-            <small>Clique nos cabeçalhos das colunas para ordenador a lista</small>
+            <small>Clique nos cabeçalhos das colunas para ordenar a lista</small>
 
             <table class="tabela-musicas">
                 <thead class="header-tabelas-musicas">
@@ -40,28 +40,8 @@
                     <th scope="col">Quantidade de vendas</th>
                 </thead>
 
-                <tbody class="corpo-tabelas-musicas">
-                    <tr>
-                        <td>1</td>
-                        <td>Banda teste</td>
-                        <td>Album teste</td>
-                        <td>2025</td>
-                        <td>20 milhões</td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Banda teste</td>
-                        <td>Album teste</td>
-                        <td>2025</td>
-                        <td>20 milhões</td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Banda teste</td>
-                        <td>Album teste</td>
-                        <td>2025</td>
-                        <td>20 milhões</td>
-                    </tr>
+                <tbody class="corpo-tabela-musicas">
+                    
                 </tbody>
             </table>
 
