--- a/atv2-padroes-web/main.html
+++ b/atv2-padroes-web/main.html
@@ -5,7 +5,7 @@
     <head>
         <title> ATV03-09-ICSM49</title>
 
-        <link rel="stylesheet" href="./stylesheet.css">
+        <link rel="stylesheet" href="stylesheet.css">
         <script defer src="./script.js"></script>
     </head>
 
@@ -30,14 +30,17 @@
             </p>
 
             <small>Clique nos cabeçalhos das colunas para ordenar a lista</small>
-
+            
             <table class="tabela-musicas">
+                <caption>50 álbuns mais vendidos da história</caption>
                 <thead class="header-tabelas-musicas">
-                    <th scope="col">Posição</th>
-                    <th scope="col">Artista/Banda</th>
-                    <th scope="col">Nome do album</th>
-                    <th scope="col">Ano</th>
-                    <th scope="col">Quantidade de vendas</th>
+                    <tr>
+                        <th scope="col">Posição</th>
+                        <th scope="col">Artista/Banda</th>
+                        <th scope="col">Nome do album</th>
+                        <th scope="col">Ano</th>
+                        <th scope="col">Quantidade de vendas</th>
+                    </tr>
                 </thead>
 
                 <tbody class="corpo-tabela-musicas">
