Função de ordenação por coluna

--- a/atv2-padroes-web/main.html
+++ b/atv2-padroes-web/main.html
@@ -35,11 +35,11 @@
                     <caption>50 álbuns mais vendidos da história</caption>
                     <thead class="header-tabelas-musicas">
                         <tr>
-                            <th scope="col">Posição</th>
-                            <th scope="col">Artista/Banda</th>
-                            <th scope="col">Nome do album</th>
-                            <th scope="col">Ano</th>
-                            <th scope="col">Quantidade de vendas</th>
+                            <th scope="col" id="posicao">Posição</th>
+                            <th scope="col" id="artista">Artista/Banda</th>
+                            <th scope="col" id="nome">Nome do album</th>
+                            <th scope="col" id="ano">Ano</th>
+                            <th scope="col" id="quantidade">Quantidade de vendas</th>
                         </tr>
                     </thead>
 
@@ -48,6 +48,7 @@
                     </tbody>
                 </table>
             </div>
+            
         <footer>
             <p><small>Marcela de Meira Carvalho & Murilo Bontorin Franco</small></p>
         </footer>
